kubernetes/global/ingress-nginx-calculator.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: calc-k8-ingress
  namespace: calculator
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: calculator.10.xxx.xxx.67.nip.io # change the IP address here
    http:
      paths:
      - backend:
          serviceName: calcfrontendservice
          servicePort: 80
        path: /(.*)
      - backend:
          serviceName: addservice
          servicePort: 80
        path: /api/addservice(.*)
      - backend:
          serviceName: substractservice
          servicePort: 80
        path: /api/substractservice(.*)
      # - backend:
      #     serviceName: inventoryservice
      #     servicePort: 80
      #   path: /api/inventoryservice
